# src/auth/dto/response-user.dto.ts
@@ -1,0 +1,39 @@
+import { ApiProperty } from '@nestjs/swagger';
+import {
+  IsDate,
+  IsEmail,
+  IsNotEmpty,
+  IsString,
+  IsUUID,
+  MaxLength,
+  MinLength,
+} from 'class-validator';
+
+export class ResponseUserDto {
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsUUID()
+  id: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  @MinLength(3)
+  @MaxLength(20)
+  username: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsEmail()
+  email: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsDate()
+  createdAt: Date;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsDate()
+  updatedAt: Date;
+}
